# hermes-snow-search

./: .gitignore  LICENSE  README.md  README_CN.md  plugin.yaml  pyproject.toml
hermes_snow_search/: __init__.py  plugin.yaml  tools.py
