[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-snow-search"
version = "0.4.0"
description = "In-memory parallel search — sessions, holographic facts, built-in memory (currently supports holographic; other memory providers TBD)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "LinQuan" },
  { name = "Snow (AI Girl)" },
]

[project.entry-points."hermes_agent.plugins"]
hermes-snow-search = "hermes_snow_search"

[project.urls]
Homepage = "https://github.com/mlinquan/hermes-snow-search"

[tool.setuptools.packages.find]
include = ["hermes_snow_search*"]
